# internetarchive-rs

./: .env.example  .gitignore  Cargo.toml  README.md  codecov.yml  deny.toml  lychee.toml
.github/workflows/: ci.yml  live-daily.yml  release.yml
docs/: live-api-ci.md
scripts/: live_ia_python_probe.py
src/: client.rs  client_uploader_traits_impl.rs  downloads.rs  endpoint.rs  error.rs  ids.rs  lib.rs  metadata.rs  model.rs  poll.rs  retry.rs  search.rs  serde_util.rs  upload.rs  workflow.rs
tests/: cleanup_support.rs  client_api.rs  client_uploader_traits.rs  live_smoke.rs  mock_api.rs  mock_support.rs  retry.rs
