[package]
name = "internetarchive-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.86"
description = "Async Rust client for Internet Archive item metadata, search, uploads, metadata updates, and downloads."
license = "MIT"
repository = "https://github.com/LucaCappelletti94/internetarchive-rs"
readme = "README.md"
keywords = ["internet-archive", "archive-org", "uploads", "downloads"]
categories = ["api-bindings", "multimedia"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
indicatif = ["dep:futures-core", "dep:indicatif"]

[dependencies]
bytes = "1.10"
client-uploader-traits = "0.1.0"
futures-core = { version = "0.3", optional = true }
indicatif = { version = "0.17", optional = true }
json-patch = "4.1"
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "query", "stream"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
axum = "0.8"
http-body-util = "0.1"
tempfile = "3.20"
