[package]
name = "internetarchive-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
description = "Async Rust client for Internet Archive item metadata, search, uploads, metadata updates, and downloads."
license = "MIT"
repository = "https://github.com/LucaCappelletti94/internetarchive-rs"
readme = "README.md"
keywords = ["internet-archive", "archive-org", "uploads", "downloads"]
categories = ["api-bindings", "multimedia"]

[package.metadata.docs.rs]
features = ["rustls-ring-tls", "indicatif"]
no-default-features = true

[package.metadata.cargo-semver-checks.lints]
feature_not_enabled_by_default = "warn"

[features]
default = ["rustls-ring-tls"]
native-tls = ["reqwest/native-tls"]
# Legacy: rustls with reqwest's default provider (aws-lc-rs, a C build).
rustls-tls = ["reqwest/rustls"]
# rustls with the pure-ring provider and no aws-lc. Installs ring as the
# process-default provider at client-build time (see `ensure_rustls_provider`).
rustls-ring-tls = [
    "dep:rustls",
    "reqwest/rustls-no-provider",
    "rustls/ring",
    "rustls/std",
]
# rustls with no provider, for a dependent that installs its own.
rustls-no-provider = ["reqwest/rustls-no-provider"]
indicatif = ["dep:futures-core", "dep:indicatif"]

[dependencies]
bytes = "1.11"
client-uploader-traits = "0.1.0"
futures-core = { version = "0.3", optional = true }
indicatif = { version = "0.18", optional = true }
json-patch = "4.2"
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
quick-xml = { version = "0.40.1", features = ["serialize"] }
reqwest = { version = "0.13.3", default-features = false, features = ["form", "json", "query", "stream"] }
rustls = { version = "0.23", default-features = false, optional = true }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
axum = "0.8"
dotenvy = "0.15"
http-body-util = "0.1"
tempfile = "3.27"
